# ai-video-editing

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODING-GUIDLINES.md  MVP-Global-Dev-Infrastructure-Plan.md  README.md  config.example.yaml  pyproject.toml  Éditeurs vidéo open source.txt
.github/workflows/: python-ci.yml
autoedit/backends/: base.py
autoedit/backends/lightning/: transcriber.py
autoedit/backends/local/: transcriber.py
autoedit/cli/: main.py
autoedit/core/: ingest.py  scene_detect.py  select.py
autoedit/exporters/: mlt.py
autoedit/schemas/: selection.py  sequences.py  transcript.py
autoedit/storage/: __init__.py  base.py  s3.py
docs/: CLI.md
docs/beam/: accounts.md  getting-started.md  gpu acceleration.txt
infra/: README.md
samples/: README.md
services/stt-service/: Dockerfile.gpu  app.py  requirements.txt
tests/: test_cli_smoke.py  test_exporter_mlt.py  test_layout.py  test_select.py
tests/services/: test_stt_service.py
